--- a/public/style/game.css
+++ b/public/style/game.css
@@ -60,7 +60,7 @@ canvas {
     border: 3px solid #cccccc;
 }
 
-/ Second Area, the Menu Area (First Menu with Players and Second menu with current Functions) */
+/* Second Area, the Menu Area (First Menu with Players and Second menu with current Functions) */
 .menu
 {
     height:700px;
